@@ -71,7 +71,7 @@ PyMethodDef pyevtx_record_object_methods[] = {
 	{ "get_event_identifier",
 	  (PyCFunction) pyevtx_record_get_event_identifier,
 	  METH_NOARGS,
-	  "get_event_identifier() -> Integer\n"
+	  "get_event_identifier() -> Long\n"
 	  "\n"
 	  "Retrieves the event identifier." },
 
@@ -845,8 +845,8 @@ PyObject *pyevtx_record_get_event_identifier(
 
 		return( NULL );
 	}
-	return( PyInt_FromLong(
-	         (long) event_identifier ) );
+	return( PyLong_FromUnsignedLong(
+	         (unsigned long) event_identifier ) );
 }
 
 /* Retrieves the event level
