@@ -74,6 +74,12 @@ Debug:
 Recovery:
 * scan for records in chunk free space
 
+20130727
+* updated dependencies
+* pyevtx
+  - changed event identifier to an unsigned long
+  - fixes for >2G file objects in BFIO glue code
+
 20130718
 * updated dependencies
 * removed unnecessary restriction in library include headers
